Aggiunto Git al ventaglio di competenze (nuova minicard, aggiunta dell'SVG), aggiornato il CV

--- a/chisono.html
+++ b/chisono.html
@@ -82,7 +82,9 @@
             <section class="cover-prev">
                 <h2>Le mie competenze</h2>
                 <p>In ambito di Design, sono in grado di ideare e progettare da zero qualsiasi prodotto grafico, attraverso le nozioni apprese e consolidate nel tempo e l’uso di software quali Illustrator, Photoshop, InDesign, Figma, Inkscape.</p>
-                <p>In ambito Front-end ho avuto modo di approfondire HTML e CSS (recentemente utilizzo anche SASS) mentre per quanto riguarda Javascript posso dire che lo studio è in corso.</p>
+                <p>In ambito Front-end ho avuto modo di approfondire <abbr title="Hyper Text Markup Language">HTML</abbr> e <abbr title="Cascading Style Sheets">CSS</abbr> e <abbr title="Syntactically Awesome Style Sheets">SASS</abbr>, mentre per quanto riguarda Javascript posso dire che lo studio è in corso.
+                    Di recente ho acquisito i findamentali di Git e ho iniziato a utilizzarlo.
+                </p>
                 <div class="flex-container-mob">
                     <div class="card2 minicard center">
                         <figure>
@@ -113,6 +115,14 @@
                             <img src="imgs/svg/card-js-icon.svg" alt="Icona Javascript - Font font-awesome 4">
                             <figcaption class="small-h">
                                 <h1><abbr title="Javascript">JS</abbr></h1>
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="card2 minicard center">
+                        <figure>
+                            <img src="imgs/svg/card-git-icon.svg" alt="Icona Git - Font font-awesome 4">
+                            <figcaption class="small-h">
+                                <h1><abbr title="Git">Git</abbr></h1>
                             </figcaption>
                         </figure>
                     </div>
