--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             <h1>Sviluppo front-end</h1>
                             <p class="small">Adoro la sensazione di aver costruito da zero qualcosa che non esisteva.</p>
                             <h1>Linguaggi acquisiti</h1>
-                            <p class="small"><abbr title="Hyper Text Markup Language">HTML</abbr>, <abbr title="Cascading Style Sheets">CSS</abbr>, <abbr title="Syntactically Awesome Style Sheets">SASS</abbr>, <abbr title="JavaScript">JS</abbr></p>
+                            <p class="small"><abbr title="Hyper Text Markup Language">HTML</abbr>, <abbr title="Cascading Style Sheets">CSS</abbr>, <abbr title="Syntactically Awesome Style Sheets">SASS</abbr>, <abbr title="JavaScript">JS</abbr>,  Git</p>
                             <h1>Strumenti</h1>
                             <p class="small">
                                 <ul>
