Aggiunta pagina 404 personalizzata, revisione dei meta-tag in tutte le pagine

--- a/index.html
+++ b/index.html
@@ -2,20 +2,21 @@
 <html lang="it">
     <head>
         <title>Gabriele Angius - Home</title>
-	    <!--impostazioni dimensione e set di caratteri-->
-	    <meta charset="utf-8">
-	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	    <!--font-->
-	    <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Open+Sans:ital,wght@0,300;0,400;0,700;1,400&family=Quicksand:wght@400;700&family=Trykker&display=swap" rel="stylesheet">
-	    <!--incone-->
-	    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	    <!--foglio di stile-->
-	    <link href="main.css" rel="stylesheet">
-	    <!--METATAG-->
-	    <meta name="keywords" content="Portfolio, Web Design, Web Develop, Front-end Develop">
+	    <!--meta tags-->
+	    <meta charset="UTF-8" />
+        <meta name="description" content="Sito-portfolio di Gabriele Angius, un giovane designer e front-end developer. Visitando la pagina potrai scoprire i lavori che ho realizzato, chi sono, quali sono le mie competenze e con quale percorso formativo le ho ottenute!" />
+        <meta name="keywords" content="Portfolio, Web Design, Web Develop, Front-end Develop" />
 	    <meta name="author" content="Gabriele Angius">
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="theme-color" content="#FF8523" />
+	    <!--font-->
+	    <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Open+Sans:ital,wght@0,300;0,400;0,700;1,400&family=Quicksand:wght@400;700&family=Trykker&display=swap" rel="stylesheet" />
+	    <!--incone-->
+	    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+	    <!--foglio di stile-->
+	    <link href="main.css" rel="stylesheet" />
     </head>
     <body>
         <header>
