Sostituita l'immagine nella sezione chi sono, cambiato il color theme nel metatag

--- a/chisono.html
+++ b/chisono.html
@@ -8,7 +8,7 @@
         <meta name="keywords" content="Portfolio, Web Design, Web Develop, Front-end Develop" />
 	    <meta name="author" content="Gabriele Angius">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="theme-color" content="#FF8523" />
+        <meta name="theme-color" content="#0A0A0A" />
 	    <!--font-->
 	    <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -40,12 +40,12 @@
         <main>
             <section>
                 <h1 class="display">Chi sono</h1>
-                <div class="flex-container-mob">
+                <div class="flex-container-mob" id="mipresento">
                     <div>
                         <h2>Mi presento</h2>
                         <p>Mi chiamo Gabriele Angius, sono un ragazzo nato nel 1999 e attualmente risiedo in un piccolo comune del sud Sardegna. Eterno curioso, da sempre sono attratto ed affascinato dalla tecnologia e tutto ciò che gli ruota intorno.</p>
                     </div>
-                    <img src="imgs/png/io.png" alt="ritratto di Gabriele" id="foto_gab">   
+                    <img src="imgs/svg/Illustration.svg" alt="Illustrazione pc">   
                 </div>
                                      
             </section>
